Thu Oct  3 09:36:38 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Prepared for next release

Thu Oct 03 09:47:23 CEST 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.2.2 released.

Mon Sep 30 18:45:25 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ace-install:
          Use -perm /xxx instead of -perm -xxx, the last variant is
          deprecated

Fri Sep 27 21:33:58 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp: Same fix as Thu Sep 26 20:22:53 made to recvv_n_i(),
          sendv_n_i(), readv_n(), writev_n().

        * ace/FILE_IO.cpp (recvv): Resolve 64-bit compile warnings and ensure
          that no more is read than can be accurately reported.

        * ace/INET_Addr.cpp (set):
        * ace/Ping_Socket.cpp:
          Resolve 64-bit compile warning on Windows.

Thu Sep 26 20:22:53 UTC 2013  Steve Huston  <shuston@riverace.com>

        * ace/ACE.cpp (recvv_n_i): Resolve 64-bit compile warning on Windows.

Sun Sep 22 21:14:38 UTC 2013  Abdul Sowayan  <sowayan@gmail.com>

        * include/makeinclude/platform_macosx_mavericks.GNU:
          Adding support for OSX 10.9 Mavericks

Sun Sep 22 21:07:34 UTC 2013  Abdul Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-mavericks.h:

          Adding support for OSX 10.9 Mavericks

Sat Sep 21 14:12:18 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_23_Test.cpp:
          Extended test case

Sat Sep 21 14:05:54 UTC 2013  johnny  <johnny@remedy.nl>

        * bin/ACE+TAO+CIAO+DAnCE.json:
          Ignore all throw

Tue Sep 17 13:10:05 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_27_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc: