@@ -4,7 +4,7 @@
 # @file make_release.py
 # @author William R. Otte <wotte@dre.vanderbilt.edu>
 #
-# Packaging script for ACE/TAO/CIAO
+# Packaging script for ACE/TAO/CIAO/DAnCE
 
 from __future__ import with_statement
 from time import strftime
@@ -203,9 +203,9 @@ def check_workspace ():
     # @@TODO: Replace with a svn library
     try:
         rev = svn_client.update (doc_root)
-        print "Successfully updated ACE/TAO/CIAO working copy to revision "
+        print "Successfully updated ACE/TAO/CIAO/DAnCE working copy to revision "
     except:
-        print "Unable to update ACE/TAO/CIAO workspace at " + doc_root
+        print "Unable to update ACE/TAO/CIAO/DAnCE workspace at " + doc_root
         raise
 
     try:
@@ -916,8 +916,8 @@ def generate_workspaces (stage_dir):
     mpc_option += ' -relative CIAO_ROOT=' + stage_dir + '/ACE_wrappers/TAO/CIAO '
     mpc_option += ' -relative DANCE_ROOT=' + stage_dir + '/ACE_wrappers/TAO/DAnCE '
     msvc_exclude_option = ' -exclude TAO/CIAO/CIAO_TAO_DAnCE_OpenDDS.mwc,TAO/CIAO/CIAO_TAO_OpenDDS.mwc,TAO/CIAO/CIAO_TAO_DAnCE_OpenDDS_shapes.mwc '
+    vc11_option = ' -name_modifier *_vc11 '
     vc10_option = ' -name_modifier *_vc10 '
-    vc9_option = ' -name_modifier *_vc9 '
 
     redirect_option = str ()
     if not opts.verbose:
@@ -926,11 +926,11 @@ def generate_workspaces (stage_dir):
     print "\tGenerating GNUmakefiles...."
     ex (mpc_command + " -type gnuace " + exclude_option + workers_option + mpc_option + redirect_option)
 
+    print "\tGenerating VC11 solutions..."
+    ex (mpc_command + " -type vc11 "  + msvc_exclude_option + mpc_option + workers_option + vc11_option + redirect_option)
+
     print "\tGenerating VC10 solutions..."
     ex (mpc_command + " -type vc10 "  + msvc_exclude_option + mpc_option + workers_option + vc10_option + redirect_option)
-
-    print "\tGenerating VC9 solutions..."
-    ex (mpc_command + " -type vc9 "  + msvc_exclude_option + mpc_option + workers_option + vc9_option + redirect_option)
 
     print "\tCorrecting permissions for all generated files..."
     ex ("find ./ -name '*.vc[p,w]' -or -name '*.bmak' -or -name '*.vcproj' -or -name '*.sln' -or -name '*.vcxproj' -or -name '*.filters' -or -name 'GNUmake*' | xargs chmod 0644")
